Fixed up <pre> and resolved the extra spacing with body

--- a/client/stylesheets/base.styl
+++ b/client/stylesheets/base.styl
@@ -84,6 +84,10 @@ button {
   }
 }
 
+pre {
+  background: #ebebf1;
+  padding: 0 .5em;
+}
 code {
   font-family: Monaco, monospace;
   background: #ebebf1;
@@ -93,6 +97,7 @@ code {
 
 pre > code {
   font-size: 1em;
+  padding: 0;
 }
 
 li {
