--- a/client/stylesheets/post.styl
+++ b/client/stylesheets/post.styl
@@ -260,6 +260,9 @@ with-slider(color) {
     & + ul, & + ol {
       margin-top: 0;
     }
+    &:first-of-type {
+      margin-top: 0;
+    }
   }
   /* lists */
   ul, ol {
